cilium-host-process-identities-poc-demo/yaml/policy-allow-auditor-teller-to-access-db.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-teller-auditor-to-access-db"
spec:
  endpointSelector:
    matchLabels:
      role: database
  ingress:
  - fromEndpoints:
    - matchLabels:
        role: teller
    - matchLabels:
        role: auditor
